SERVER-14601 Use proper error codes for NotMaster errors