src/mongo/db/s/set_shard_version_command.cpp
@@ -205,7 +205,7 @@ public:
             autoDb.emplace(opCtx, nss.db(), MODE_IS);
 
             // Slave nodes cannot support set shard version
-            uassert(40589,
+            uassert(ErrorCodes::NotMaster,
                     str::stream() << "setShardVersion with collection version is only supported "
                                      "against primary nodes, but it was received for namespace "
                                   << nss.ns(),
